# uzi

./: README.md  pyproject.toml
src/raw/: config.py
src/raw/application/: __init__.py
src/raw/application/services/: group.py  groups.py  session.py  system.py  tag.py
src/raw/cli/: __init__.py  constants.py  parser.py
src/raw/cli/commands/: groups.py
src/raw/cli/icmds/: __init__.py  daemon.py  general.py
src/raw/cli/utils/: icm.py
src/raw/common/: config.py
src/raw/domain/: __init__.py
src/raw/domain/base/: entity.py  enums.py  interfaces.py
src/raw/domain/config/: entity.py
src/raw/domain/group/: entity.py  interfaces.py
src/raw/domain/session/: entity.py  interfaces.py
src/raw/domain/tag/: entity.py  interfaces.py
src/raw/infrastructure/: __init__.py
src/raw/infrastructure/adapters/: files.py
src/raw/infrastructure/sqla/: session.py
src/raw/rawd/: daemon.py  handler.py
src/raw/rawd/database/: funcs.py  session.py
src/raw/rawd/entities/: __init__.py  entity.py  session.py
src/raw/rawd/repositories/: tag.py
src/raw/rawd/services/: base.py  decorators.py  folders.py  sessions.py  tags.py
src/sine/cli/: __init__.py
src/sine/common/: __init__.py  _parsers.py  constants.py  driller.py  parsers.py  rspd.py
src/sine/daemon/: funcs.py  handler.py
src/sine/daemon/database/: funcs.py
src/sine/daemon/entities/: session.py
src/sine/daemon/repositories/: note.py
src/sine/daemon/services/: base.py  decorators.py  folders.py  notes.py  sessions.py  tags.py  tasks.py
src/wu/cli/: constants.py
src/wu/cli/icmds/: __init__.py
(+22 files in other folders)
