[project]
name = "raw"
version = "1.3.4"
description = "A CLI Tool for Tracking Study & Work Time 🦇"

authors = [
    {name = "Dvodnenko",email = "thekovalskii@gmail.com"}
]

packages = [
    { include = "raw", from = "src" }
]

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "python-daemon (>=3.1.2,<4.0.0)",
    "setproctitle (>=1.3.7,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
raw = "raw.cli:raw"
rawd = "raw.rawd.daemon:run"
